<resources>
    <string name="app_name">Sticker</string>

    <string name="action_settings">Settings</string>

    <string name="emergent_stickers">緊急的Stickers</string>
    <string name="recent_stickers">最近的Stickers</string>

    <string name="navigation_mainpage">主頁</string>
    <string name="navigation_category">分類</string>
    <string name="navigation_search">搜尋</string>
    <string name="navigation_setting">設定</string>

    <string name="remind">是否要提醒</string>
    <string name="calendars">曆法</string>

    <string-array name="calendar_options">
        <item>西元曆</item>
        <item>國曆</item>
        <item>農曆</item>
    </string-array>
    <string name="title_activity_sticker_list">sticker_list</string>

    <string-array name="sticker_state">
        <item>CREATE</item>
        <item>MODIFY</item>
        <item>VIEW</item>
    </string-array>
</resources>
